--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "i18next": "^25.8.13",
     "lucide-react": "^0.563.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-i18next": "^16.5.4",
     "react-simple-maps": "^3.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
